[solar] fixed adress on mobile

--- a/solar/style/less/elements/adjust-widget/obstacle.less
+++ b/solar/style/less/elements/adjust-widget/obstacle.less
@@ -1,6 +1,13 @@
 
 // ADJUST OBSTACLES
 
+.obstacle .adjust-item-widget {
+    margin-bottom: 0;
+    @media @medium {
+        margin-bottom: @margin * 2;
+    }
+}
+
 .obstacle-wrapper {
     display: flex;
     flex-wrap: wrap;
